Configurando interfaz menu.php, agregando librerias y estilos

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,4 @@
-/* En esta carpeta estaran todos los archivos css para los estilos del proyecto */
+main {
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
