--- a/styles/style_gasolina.css
+++ b/styles/style_gasolina.css
@@ -1,7 +1,18 @@
 main {
     margin-left: 3rem;
-    margin-right: 3rem;
+    margin-right: 3rem;    
 }
 
 
 
+
+@media screen and (max-width: 650px) {
+    #table{
+        width: 100%;        
+    }
+
+    #chart{
+        width: 100%;
+        height: 900px !important;
+    }
+}
