--- a/styles/style_gasolina.css
+++ b/styles/style_gasolina.css
@@ -5,14 +5,49 @@ main {
 
 .container-chart{
     width: 100%;
-    height: 100%;
+    height: 100% !important;
     box-shadow: 0px 0px 20px 0px black;
     border-radius: 13px;
 }
 
+
+html,
+body{
+  height: 100%;
+}
+
 #table{
     box-shadow: 0px 0px 20px 0px black;
+    border-radius: 13px;
 }
+
+#statistics{
+    box-shadow: 0px 0px 20px 0px black;
+    border-radius: 13px;
+}
+
+#gas-consumed{
+    box-shadow: 0px 0px 20px 0px black;
+    border-radius: 13px;
+}
+
+#km_traveled{
+    box-shadow: 0px 0px 20px 0px black;
+    border-radius: 13px;
+}
+
+#litters_consumed{
+    box-shadow: 0px 0px 20px 0px black;
+    border-radius: 13px;
+}
+
+#travel_cost{
+    box-shadow: 0px 0px 20px 0px black;
+    border-radius: 13px;
+}
+
+
+
 
 @media screen and (max-width: 650px) {
     #table{
@@ -29,7 +64,25 @@ main {
         margin-top: 9px;
         width: 300px;
         height: 600px !important;
-        position: relative;
-        
+        position: relative;        
     }
+
+    #gas-consumed{
+        width: 100%;
+    }
+
+    #km_traveled{
+        width: 100%;
+    }
+    
+    #litters_consumed{
+        width: 100%;
+    }
+    
+    #travel_cost{
+        width: 100%;
+    }
+
+
+
 }
