--- a/styles/style_gasolina.css
+++ b/styles/style_gasolina.css
@@ -33,7 +33,12 @@ body{
 
 #km_traveled{
     box-shadow: 0px 0px 20px 0px black;
-    border-radius: 13px;
+    border-radius: 13px;        
+}
+
+#km_traveled:hover {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 #litters_consumed{
@@ -41,11 +46,20 @@ body{
     border-radius: 13px;
 }
 
+#litters_consumed:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
 #travel_cost{
     box-shadow: 0px 0px 20px 0px black;
     border-radius: 13px;
 }
 
+#travel_cost:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
 
 
 
